# BeyondCXAnalytics_AE_v2

./: .gitignore  CLAUDE.md  CLEANUP_PLAN.md  Dockerfile  README.md  deploy.sh  docker-compose.yml  install_beyond.sh  notas.md
backend/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  output.json  pyproject.toml
backend/beyond_api/: __init__.py  main.py  security.py
backend/beyond_api/api/: __init__.py  analysis.py  auth.py  cache.py
backend/beyond_api/services/: analysis_service.py
backend/beyond_flows/flows/: scorer_runner.py
backend/beyond_flows/scorers/: __init__.py  agentic_score.py
backend/beyond_metrics/: __init__.py  agent.py  pipeline.py
backend/beyond_metrics/configs/: basic.json  beyond_metrics_config.json
backend/beyond_metrics/dimensions/: EconomyCost.py  OperationalPerformance.py  SatisfactionExperience.py  Volumetria.py  __init__.py
backend/beyond_metrics/io/: __init__.py  base.py  google_drive.py  local.py  s3.py
backend/data/example/: call_center_dataset.csv  synthetic_interactions.csv
backend/docs/: notas git.md  notas.md
backend/nginx/conf.d/: beyondcx-api.conf
backend/tests/: test_api.sh  test_economy_cost.py  test_operational_performance.py  test_satisfaction_experience.py  test_volumetria.py
frontend/: .gitignore  App.tsx  Dockerfile  constants.ts  package-lock.json  package.json  types.ts  vite-env.d.ts
frontend/components/: DashboardHeader.tsx  DashboardReorganized.tsx  DashboardTabs.tsx  DataInputRedesigned.tsx  LoginPage.tsx  MetodologiaDrawer.tsx  OpportunityMatrixPro.tsx  OpportunityPrioritizer.tsx  (+1 more)
(+21 files in other folders)
